Fix alignment of the Ride Reports Needed Block contents

--- a/style.css
+++ b/style.css
@@ -4906,8 +4906,7 @@ div.region.region-banner2 div.block .content {
         background-size: 184px 100%;
     }
 
-    div.region.region-banner2 div.block .content,
-    div.region.region-banner2 div.block .view-content {
+    div.region.region-banner2 div.block .content {
         display: flex;
     }
 
